@@ -52,7 +52,6 @@
     class=".geoview.GeoView"
     permission="zope2.View"
     allowed_attributes="isGeoreferenceable
-      showCoordinatesTab
       hasCoordinates"
   />
 
